# cpb

./: Cargo.toml  LICENSE  README.md
.github/workflows/: codecov.yaml  push.yaml  release.yaml
src/: main.rs
tests/: cli.rs
