[package]
name = "cpb"
version = "0.1.1"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/St4NNi/cpb"
description = "a faster, simpler alternative to cp"
authors = ["Sebastian Beyvers <sebastian.beyvers@cb.jlug.de>"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["copy", "filesystem", "parallel"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
jwalk = "0.8"
libc = "0.2"
pathdiff = "0.2"
reflink-copy = "0.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_env = "musl")'.dependencies]
tikv-jemallocator = "0.6.1"
